--- a/listaToDo.html
+++ b/listaToDo.html
@@ -37,6 +37,7 @@
         <table v-else class="table" >
             <thead>
                 <tr >
+                    <th scope="col"></th>
                     <th scope="col">Item</th>
                     <th scope="col" >Status</th>
                     <th scope="col" >Descrição</th>
@@ -46,7 +47,10 @@
             </thead>
             <tbody v-for="(tarefa, index) in tarefas" :key="index">
                 <tr :class="{editing: tarefa.id == idEditar}">
-                    <td >
+                    <td class="star" @click="ativaDesativaImportancia(tarefa.nivel, tarefa.id)" :class="{ativaStar: tarefa.nivel==1, desativaStar: tarefa.nivel==0}" >
+                        <svg :class="{starIcon: tarefa.status == 'Finalizado'}"  xmlns="http://www.w3.org/2000/svg" height="28px" viewBox="0 0 24 24" width="28px" fill=""><path d="M0 0h24v24H0z" fill="none"/><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>
+                    </td>
+                    <td :class="{finalizado : tarefa.status=='Finalizado'}">
                         {{tarefa.id}}
                     </td>
                     <td :class="{
