--- a/listaToDo.html
+++ b/listaToDo.html
@@ -15,7 +15,8 @@
     <div id="lista">
         <h1>Lista de Tarefas</h1>
         <div class="input-group mb-3">
-            <input type="text" v-model="novaTarefa" class="form-control" placeholder="Nome da tarefa" >
+            <!-- <input type="text" v-model="novaTarefa" class="form-control" placeholder="Nome da tarefa"  > -->
+            <input-text-counter class="templateInput" v-model="novaTarefa" ></input-text-counter>
 
             <select :style="styleSelect"
                     name="select" 
@@ -50,7 +51,7 @@
                     <td class="star" @click="ativaDesativaImportancia(tarefa.nivel, tarefa.id)" :class="{ativaStar: tarefa.nivel==1, desativaStar: tarefa.nivel==0}" >
                         <svg :class="{starIcon: tarefa.status == 'Finalizado'}"  xmlns="http://www.w3.org/2000/svg" height="28px" viewBox="0 0 24 24" width="28px" fill=""><path d="M0 0h24v24H0z" fill="none"/><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>
                     </td>
-                    <td :class="{finalizado : tarefa.status=='Finalizado'}">
+                    <td  :class="{finalizado : tarefa.status=='Finalizado'}">
                         {{tarefa.id}}
                     </td>
                     <td :class="{
@@ -60,7 +61,7 @@
                     >
                         {{tarefa.status}}
                     </td>
-                    <td :class="{finalizado : tarefa.status=='Finalizado'}">
+                    <td id="descricao" :class="{finalizado : tarefa.status=='Finalizado'}">
                         {{tarefa.texto}}
                     </td>
                     <td :class="{
