--- a/listaToDo.html
+++ b/listaToDo.html
@@ -33,7 +33,7 @@
             
         </div>
 
-        <p v-if="tarefas == ''">Ainda não há tarefas cadastradas</p>
+        <p class="semTarefas" v-if="tarefas == ''">Ainda não há tarefas cadastradas</p>
 
         <table v-else class="table" >
             <thead>
