--- a/listaToDo.html
+++ b/listaToDo.html
@@ -15,7 +15,6 @@
     <div id="lista">
         <h1>Lista de Tarefas</h1>
         <div class="cabecalho">
-            <!-- <input type="text" v-model="novaTarefa" class="form-control" placeholder="Nome da tarefa"  > -->
             <input-text-counter class="templateInput" v-model="novaTarefa" ></input-text-counter>
 
             <select :style="styleSelect"
@@ -46,7 +45,7 @@
                     <th scope="col" ></th>
                 </tr>
             </thead>
-            <tbody v-for="(tarefa, index) in tarefas" :key="index">
+            <tbody v-for="(tarefa, index) in tarefas" :key="tarefa.id">
                 <tr :class="{editing: tarefa.id == idEditar}">
                     <td class="star" @click="ativaDesativaImportancia(tarefa.nivel, tarefa.id)" :class="{ativaStar: tarefa.nivel==1, desativaStar: tarefa.nivel==0}" >
                         <svg :class="{starIcon: tarefa.status == 'Finalizado'}"  xmlns="http://www.w3.org/2000/svg" height="28px" viewBox="0 0 24 24" width="28px" fill=""><path d="M0 0h24v24H0z" fill="none"/><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"/></svg>
@@ -64,8 +63,10 @@
                     <td id="descricao" :class="{finalizado : tarefa.status=='Finalizado'}">
                         {{tarefa.texto}}
                     </td>
-                    <td :class="{
-                        expirou: tarefa.data < dataAtual,
+                    <td :class="
+                        {expirou: tarefa.data[0] + tarefa.data[1]  < dataAtual[0] + dataAtual[1] 
+                                || tarefa.data[3] + tarefa.data[4]  < dataAtual[3] + dataAtual[4]
+                                || tarefa.data[8] + tarefa.data[9]  < dataAtual[8] + dataAtual[9],
                         finalizado : tarefa.status=='Finalizado'}" >
                         {{tarefa.data}}
                     </td>
