--- a/listaToDo.html
+++ b/listaToDo.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div id="lista">
+        <input-checkbox /></input-checkbox>
         <h1>Lista de Tarefas</h1>
 
         <div class="cabecalho">
