--- a/listaToDo.html
+++ b/listaToDo.html
@@ -17,7 +17,7 @@
         <h1>Lista de Tarefas</h1>
 
         <div class="cabecalho">
-            <input-text-counter class="templateInput" v-model="novaTarefa"  ></input-text-counter>
+            <input-text-counter class="templateInput" v-model="novaTarefa" :ativar="limitarCaracter" ></input-text-counter>
 
             <select :style="styleSelect"
                     name="select" 
@@ -96,6 +96,6 @@
     </div>
 </body>
 </html>
-<script src="./vue.js"></script>
+<script src="./vue.js" ></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
